Update Redirection or URL Changes

--- a/public/home/home.html
+++ b/public/home/home.html
@@ -115,10 +115,13 @@
                         </div>
                     </div>
                     <div class="alert alert-danger" ng-show="errorMsg">
-                        <strong>{{errorMsg}}</strong> 
+                        <strong>{{errorMsg}}</strong>
                     </div>
                     <div class="alert alert-danger">
                         <strong>Backport Transactions</strong> are not supported by this tool.
+                    </div>
+                    <div class="alert alert-info">
+                        <strong>Important Info!</strong> Please update your bookmark to new URL for this tool. http://slc04kxc.us.oracle.com will soon be decommissioned
                     </div>
                     <!--<div ng-show="transaction.validationStatus==='completed'">
                         <div class="panel panel-default" style="margin-left:80px">
